# schedule-template

./: .gitignore  Cargo.toml
app/: Cargo.toml
app/src/tasks/: mod.rs
bootstrap/: Cargo.toml
bootstrap/src/: lib.rs
src/: main.rs
